[package]
name = "voro_rs"
build = "build.rs"
edition = "2021"
version = "0.1.0"
authors = [
    "Chris H. Rycroft <chr@alum.mit.edu>",
    "Yongda Fan <fanyongda2012@gmail.com",
]
license = "(MIT OR Apache-2.0) AND BSD-3-Clause-LBNL"
description = "A Rust binding for voro++ library"
repository = "https://github.com/LogicFan/voro_rs"
readme = "README"

[dependencies]
cxx = "1.0"
itertools = "0.13"

[build-dependencies]
cxx-build = "1.0"
